bugfix: possible concurrency problems

--- a/src/javascript/widget/demo.html
+++ b/src/javascript/widget/demo.html
@@ -65,7 +65,7 @@
                        };
       var widget = LEELA.widget(jQuery("#placeholder"), { yaxis: {labels: {formatter: yformatter},
                                                                  },
-                                                          chart: {type: "spline",
+                                                          chart: {type: "spline"
                                                                  }
                                                         });
       if (endpoint !== undefined && key !== undefined) {
