--- a/src/javascript/widget/demo.html
+++ b/src/javascript/widget/demo.html
@@ -31,9 +31,8 @@
     <span id="uri"></span></br>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.js"></script>
     <script type="text/javascript" src="https://raw.github.com/HumbleSoftware/Flotr2/master/flotr2.min.js"></script>
-    <script type="text/javascript" src="functions.js"></script>
     <script type="text/javascript" src="flotr2_backend.js"></script>
-    <script type="text/javascript" src="widget.js"></script>
+    <script type="text/javascript" src="leela-widget.min.js"></script>
 
     <script type="text/javascript">
       var qparam = function (name, defval) {
@@ -80,7 +79,7 @@
         for (var k=0; k<keys.length; k+=1) {
           var uri = endpoint + "/v1/past24/" + encodeURIComponent(keys[k]);
           jQuery.ajax(uri, { dataType: "jsonp",
-                             success: LEELA.f.dot(widget.render, LEELA.f.average(res))
+                             success: (res==0 ? widget.render : LEELA.f.dot(widget.render, LEELA.f.average(res, 0)))
                            });
         }
       }
