--- a/src/javascript/widget/demo.html
+++ b/src/javascript/widget/demo.html
@@ -49,11 +49,11 @@
       var yformat    = qparam("yformat");
       var yformatter = function (n) {
                          if (yformat === "s") {
-                           var tmp = LEELA.f.fmt_engeeringscale(n, ["B/s", "KB/s", "MB/s", "GB/s", "TB/s", "PB/s", "EB/s", "ZB/s", "YB/s"]);
+                           var tmp = LEELA.f.fmt_engineeringscale(n, ["B/s", "KB/s", "MB/s", "GB/s", "TB/s", "PB/s", "EB/s", "ZB/s", "YB/s"]);
                            var num = parseFloat(tmp[0]).toFixed(1);
                            return(num +" "+ tmp[1]);
                          } else if (yformat === "b") {
-                           var tmp = LEELA.f.fmt_engeeringscale(n, ["B", "KB", "MB", "GB", "TB", "PB", "EB", "ZB", "YB"]);
+                           var tmp = LEELA.f.fmt_engineeringscale(n, ["B", "KB", "MB", "GB", "TB", "PB", "EB", "ZB", "YB"]);
                            var num = parseFloat(tmp[0]).toFixed(1);
                            return(num +" "+ tmp[1]);
                          } else if (yformat === "%") {
