--- a/src/javascript/widget/demo.html
+++ b/src/javascript/widget/demo.html
@@ -6,6 +6,7 @@
     </head>
     <body>
     <div id="placeholder" style="width: 100%; height: 250px; margin: 8px auto;"></div>
+    <div id="legend"></div>
     <form name="chart-it" method="get">
       <label for="endpoint">
         endpoint: <br />
@@ -65,7 +66,8 @@
       var widget = LEELA.widget(jQuery("#placeholder"), { yaxis: {labels: {formatter: yformatter},
                                                                  },
                                                           chart: {type: "spline"
-                                                                 }
+                                                                 },
+                                                          legend: {container: jQuery("#legend")}
                                                         });
       if (endpoint !== undefined && key !== undefined) {
         var keys = key.split("\r\n");
