--- a/src/javascript/widget/demo.html
+++ b/src/javascript/widget/demo.html
@@ -81,7 +81,7 @@
         for (var k=0; k<keys.length; k+=1) {
           var uri = endpoint + "/v1/past24/" + encodeURIComponent(keys[k]);
           jQuery.ajax(uri, { dataType: "jsonp",
-                             success: (res==0 ? widget.render : LEELA.f.dot(widget.render, LEELA.f.average(res, 0)))
+                             success: (res==0 ? widget.render : LEELA.f.dot(widget.render, LEELA.f.average(res)))
                            });
         }
       }
