always defining the minimum to 0

--- a/src/javascript/widget/demo.html
+++ b/src/javascript/widget/demo.html
@@ -64,6 +64,7 @@
                          }
                        };
       var widget = LEELA.widget(jQuery("#placeholder"), { yaxis: {labels: {formatter: yformatter},
+                                                                  min: 0
                                                                  },
                                                           chart: {type: "spline"
                                                                  },
